--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -148,6 +148,53 @@ body {
         background-image: url("../images/webp/landing.webp");
     }
 
+    .how-teecha {
+        padding: 4em;
+        .how-teecha-title {
+            font-size: 36px;
+            color: #0009E2;
+            text-decoration: underline;
+            text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        }
+
+        .how-teecha-steps {
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            grid-column-gap: 50px;
+            margin: 50px;
+
+            .teecha-step {
+                text-align: center;
+
+                .step {
+                    background-color: color(electricVioletDull);
+                    padding: 10px 20px;
+                    margin-bottom: 1.25em;
+                    color: white;
+                    font-weight: bold;
+                }
+                .step-title {
+                    color: color(blueStone);
+                    font-weight: bold;
+                    font-size: 1.5em;
+                    margin-bottom: 1.125em;
+                }
+
+                .step-icon {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+
+                .step-description {
+                    color: color(mirage);
+                    font-size: 1.2em;
+                    margin-top: 1.125em;
+                }
+            }
+        }
+    }
+
     .trending-jpeg, .trending-webp {
         height: 700px;
         padding: 4em;
