--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -155,6 +155,7 @@ body {
             color: #0009E2;
             text-decoration: underline;
             text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+            margin-left: 50px;
         }
 
         .how-teecha-steps {
@@ -204,6 +205,7 @@ body {
             color: color(magenta);
             display: flex;
             align-items: center;
+            margin-left: 50px;
 
             .text {
                 margin-right: 10px;
