--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -108,7 +108,7 @@ body {
         }
     }
 
-    .landing-webp, .landing-jpeg, .trending-webp, .trending-jpeg {
+    .landing-webp, .landing-jpeg, .trending-webp, .trending-jpeg, .teecha-jpeg, .teecha-webp {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -194,6 +194,82 @@ body {
                 }
             }
         }
+    }
+
+    .teecha-jpeg, .teecha-webp {
+        padding: 2em 4em;
+        height: 800px;
+
+        #teecha {
+            display: flex;
+            justify-content: space-between;
+            font-weight: bold;
+
+            .teecha-caption {
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                height: fit-content;
+                padding: .5em;
+                margin-top: 50px;
+
+                .teecha {
+                    font-size: 64px;
+                    color: #000AEE;
+                }
+                .home-tuition {
+                    font-size: 36px;
+                    color: #000469;
+                }
+            }
+
+            .teecha-box {
+                background: rgba(3, 3, 3, 0.79);
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                padding: 1.5em 3.5em;
+                margin-top: 50px;
+                border-radius: 5px;
+
+                .home-tuition-areas, .category {
+                    color: color(magenta);
+                }
+
+                .home-tuition-areas {
+                    text-decoration: underline;
+                    text-align: center;
+                    font-size: 20px;
+                }
+
+                .category {
+                    margin-top: 30px;
+                }
+
+                .teecha-areas {
+                    display: grid;
+                    grid-template-columns: auto auto;
+                    column-gap: 90px;
+                    margin: 20px 0;
+
+                    ul {
+                        font-size: .9em;
+                        color: color(white);
+                        line-height: 1.5em;
+                    }
+                }
+
+                .teecha-info {
+                    color: color(white);
+                    font-size: .8em;
+                    text-align: center;
+                }
+            }
+        }
+    }
+
+    .teecha-jpeg {
+        background-image: url("../images/jpeg/teecha.jpg");
+    }
+
+    .teecha-webp {
+        background-image: url("../images/webp/teecha.webp");
     }
 
     .trending-jpeg, .trending-webp {
