[ft #168494086] update reviews layout

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -273,7 +273,49 @@ body {
     }
 
     .reviews-jpeg, .reviews-webp {
+        padding: 4em;
 
+        .title {
+            font-size: 48px;
+            text-shadow: 0 4px 30px #000000;
+            color: #FFFFFF;
+            margin: .5em 1.5em 2em 1.5em;
+        }
+
+        .reviews {
+            background: rgba(179, 189, 204, 0.74);
+            padding: 2em;
+            display: grid;
+            grid-template-columns: auto auto;
+            column-gap: 50px;
+            margin: 30px 90px;
+            border-radius: 5px;
+
+            .review {
+                margin: 25px 0;
+                .reviewer {
+                    color: color(ripePlum);
+                    font-weight: bolder;
+                    font-size: 1.5em;
+                }
+                .stars {
+                    margin: 15px 0 15px 40px;
+
+                    .turquoise span {
+                        color: color(aqua);
+                    }
+
+                    .s-grey span {
+                        color: color(grey);
+                    }
+                }
+                .comment {
+                    color: color(mirage);
+                    font-size: 1.1em;
+                    line-height: 1.5em;
+                }
+            }
+        }
     }
 
     .reviews-jpeg {
