[ch #168498884] update slogan top margin

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,6 +126,7 @@ body {
 
         .slogan {
             background: rgba(37, 37, 37, 0.44);
+            margin-top: 130px;
             padding: 1em 1em;
             display: flex;
             justify-content: center;
