--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,7 +32,6 @@ html {
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Nunito", sans-serif;
-    display: grid;
     width: 100%;
 
     .nav-bar {
@@ -121,12 +120,13 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         height: 800px;
 
 
         .slogan {
             background: rgba(37, 37, 37, 0.44);
-            margin-top: 130px;
+            margin-top: 8%;
             padding: 1em 1em;
             display: flex;
             justify-content: center;
@@ -134,7 +134,7 @@ body {
             width: fit-content;
 
             .text {
-                font-size: 4em;
+                font-size: 4rem;
                 margin-left: 10px;
                 font-weight: bold;
             }
@@ -151,11 +151,12 @@ body {
 
     .teecha-jpeg, .teecha-webp {
         padding: 2em 4em;
-        height: 800px;
+        min-height: 800px;
 
         #teecha {
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
             font-weight: bold;
 
             .teecha-caption {
@@ -176,7 +177,7 @@ body {
 
             .teecha-box {
                 background: rgba(3, 3, 3, 0.79);
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
                 padding: 1.5em 3.5em;
                 margin-top: 50px;
                 border-radius: 5px;
@@ -237,8 +238,9 @@ body {
 
         .how-teecha-steps {
             display: grid;
-            grid-template-columns: auto auto auto auto;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             grid-column-gap: 50px;
+            grid-row-gap: 50px;
             margin: 50px 0;
 
             .teecha-step {
@@ -369,7 +371,7 @@ body {
             background: rgba(179, 189, 204, 0.74);
             padding: 2em;
             display: grid;
-            grid-template-columns: auto auto;
+            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
             column-gap: 50px;
             row-gap: 70px;
             margin: 0 90px 30px 90px;
@@ -423,8 +425,9 @@ body {
         .featured-tutors {
             padding: 2em;
             display: grid;
-            grid-template-columns: auto auto;
+            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
             column-gap: 90px;
+            row-gap: 90px;
             margin: 30px 60px;
 
             .featured-tutor {
@@ -479,7 +482,7 @@ body {
     }
 
     .trending-jpeg, .trending-webp {
-        height: 700px;
+        min-height: 700px;
         padding: 4em;
 
         .trending-title {
