[ch #168498884] add drop down handlers

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -569,7 +569,7 @@ body {
     }
 
     .our-services {
-        position: absolute;
+        position: fixed;
         z-index: 105;
         top: 4.5em;
         left: 36%;
