--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -47,10 +47,6 @@ body {
         justify-content: space-around;
         align-items: center;
 
-        @include desktop {
-            justify-content: space-evenly;
-        }
-
         .nav {
             display: none;
 
@@ -160,7 +156,7 @@ body {
             font-weight: bold;
 
             .teecha-caption {
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
                 height: fit-content;
                 padding: .5em;
                 margin-top: 50px;
@@ -169,6 +165,7 @@ body {
                     font-size: 64px;
                     color: #000AEE;
                 }
+
                 .home-tuition {
                     font-size: 36px;
                     color: #000469;
