[ch #168498884] add more to teecha steps

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -282,6 +282,10 @@ body {
                     color: color(mirage);
                     font-size: 1.2em;
                     margin-top: 1.125em;
+                    .dots {
+                        color: color(azure);
+                        cursor: $pointer;
+                    }
                 }
             }
         }
