--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -831,7 +831,7 @@ body {
     z-index: 50;
 }
 
-.sign-up-modal {
+.sign-up.modal {
     background-color: color(bluewood);
     z-index: 1000;
     width: 90%;
@@ -847,20 +847,38 @@ body {
         max-width: 593px;
     }
 
-    .close-icon {
-        right: 10px;
-        top: 5px;
-        position: absolute;
-        color: white;
-        cursor: $pointer;
-    }
-
     .sign-up-text {
         text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         color: color(darkGrey);
         text-decoration: underline;
         font-size: 1.5em;
         text-align: center;
+    }
+}
+
+.sign-up.div {
+    background: rgba(3, 3, 3, 0.79);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 1.5em 3.5em;
+    //margin-top: 50px;
+    border-radius: 5px;
+
+    .sign-up-text {
+        color: color(magenta);
+        text-decoration: underline;
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+.sign-up {
+
+    .close-icon {
+        right: 10px;
+        top: 5px;
+        position: absolute;
+        color: white;
+        cursor: $pointer;
     }
 
     .user-title {
