--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -187,44 +187,61 @@ body {
                 }
             }
 
-            .teecha-box {
-                background: rgba(3, 3, 3, 0.79);
-                box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-                padding: 1.5em 3.5em;
-                margin-top: 50px;
-                border-radius: 5px;
+            .boxes {
+                display: grid;
+                grid-template-rows: auto auto;
+                row-gap: 20px;
 
-                .home-tuition-areas, .category {
-                    color: color(magenta);
-                }
+                .teecha-box {
+                    background: rgba(3, 3, 3, 0.79);
+                    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+                    padding: 1.5em 3.5em;
+                    margin-top: 50px;
+                    border-radius: 5px;
 
-                .home-tuition-areas {
-                    text-decoration: underline;
-                    text-align: center;
-                    font-size: 20px;
-                }
-
-                .category {
-                    margin-top: 30px;
-                }
-
-                .teecha-areas {
-                    display: grid;
-                    grid-template-columns: auto auto;
-                    column-gap: 90px;
-                    margin: 20px 0;
-
-                    ul {
-                        font-size: .9em;
-                        color: color(white);
-                        line-height: 1.5em;
+                    .home-tuition-areas, .category, .sub-category {
+                        color: color(magenta);
                     }
-                }
 
-                .teecha-info {
-                    color: color(white);
-                    font-size: .8em;
-                    text-align: center;
+                    .home-tuition-areas {
+                        text-decoration: underline;
+                        text-align: center;
+                        font-size: 20px;
+                    }
+
+                    .category {
+                        margin-top: 10px;
+                        text-align: center;
+                    }
+
+                    .sub-category {
+                        margin-top: 10px;
+                    }
+
+                    .teecha-areas {
+                        display: grid;
+                        grid-template-columns: auto auto;
+                        column-gap: 40px;
+                        margin: 20px 0;
+
+                        .skills {
+                            display: grid;
+                            grid-template-columns: auto auto;
+                            column-gap: 20px;
+                        }
+
+                        ul {
+                            font-size: .9em;
+                            color: color(white);
+                            line-height: 1.5em;
+                        }
+                    }
+
+                    .teecha-info {
+                        color: color(white);
+                        font-size: .8em;
+                        text-align: center;
+                    }
                 }
             }
         }
@@ -924,7 +941,12 @@ body {
         justify-content: space-evenly;
         flex-wrap: wrap;
     }
-
+    .msg {
+        margin-top: 20px;
+        color: color(white);
+        font-size: .8em;
+        text-align: center;
+    }
 }
 
 .btn-link {
