[ft #169730472] add, update site description on title

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -776,6 +776,7 @@ body {
 
             .company {
                 color: color(magenta);
+                font-size: 1.1em;
             }
         }
     }
