--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -263,6 +263,11 @@ body {
 
     .how-teecha {
         padding: 4em;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
         .how-teecha-title {
             font-size: 36px;
             color: #0009E2;
@@ -271,42 +276,68 @@ body {
             margin-left: 50px;
         }
 
+
         .how-teecha-steps {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(267px, 1fr));
-            grid-column-gap: 50px;
-            grid-row-gap: 50px;
-            margin: 50px 0;
+            grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+            border: 1px solid #888D94;
+            padding: 20px 0;
+            max-width: 900px;
 
-            .teecha-step {
-                text-align: center;
+            .col {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
-                .step {
-                    background-color: color(electricVioletDull);
-                    padding: 10px 20px;
-                    margin-bottom: 1.25em;
-                    color: white;
-                    font-weight: bold;
-                }
-                .step-title {
-                    color: color(blueStone);
-                    font-weight: bold;
-                    font-size: 1.5em;
-                    margin-bottom: 1.125em;
-                }
-
-                .step-icon {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-
-                .step-description {
-                    color: color(mirage);
-                    font-size: 1.2em;
-                    margin-top: 1.125em;
+                .down-arrow span svg, .left-arrow span svg, .right-arrow span svg {
+                    fill: color(mirage);
                 }
             }
+            .mid-col {
+                justify-content: normal;
+                align-items: normal;
+                .left-arrow {
+                    margin-top: 530px;
+                }
+                .right-arrow {
+                    margin-top: 380px;
+                }
+            }
+            .user-title {
+                font-size: 20px;
+                margin-bottom: 10px;
+                font-weight: bold;
+            }
+
+            .tutor-title {
+                color: #904A9B;
+            }
+
+            .client-title {
+                color: #2380AD;
+            }
+
+        }
+    }
+    .circle-widget {
+        .circle-icon {
+            width: 162px;
+            height: 150px;
+            border-radius: 50%;
+            border: 1px solid #888D94;
+            line-height: 150px;
+            text-align: center;
+            fill: color(mirage);
+            color: color(mirage);
+            svg {
+                margin-top: 25px;
+            }
+        }
+        .text {
+            text-align: center;
+            //align-items: center;
+            max-width: 150px;
+
         }
     }
 
