[ft #169992210] update arrows styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -291,6 +291,7 @@ body {
 
                 .down-arrow span svg, .left-arrow span svg, .right-arrow span svg {
                     fill: color(mirage);
+                    color: color(mirage);
                 }
             }
             .mid-col {
