--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -660,7 +660,21 @@ body {
             }
 
             #links {
-                margin-left: 140px;
+                margin-top: 30px;
+
+                @include desktop {
+                    margin-left: 140px;
+                    margin-top: 0;
+                }
+            }
+
+            .links {
+                display: flex;
+                justify-content: center;
+                @include desktop {
+                    display: inherit;
+                    justify-content: inherit;
+                }
             }
 
             .links a {
