--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -57,6 +57,48 @@ body {
     fill: color(mirage);
 }
 
+a {
+    text-decoration: none;
+}
+
+.btn-link {
+    -webkit-border-radius: $webkitRadius;
+    border-radius: $borderRadius;
+    cursor: $pointer;
+    text-decoration: none;
+    font-size: 1.25vw;
+    display: inline-block;
+    border-color: color(curiosBlue);
+    border-style: solid;
+    text-align: center;
+    background-color: color(white);
+    color: color(curiosBlue);
+}
+
+button:hover, .btn-link:hover {
+    transform: scale(1.1);
+}
+
+.services {
+    padding: .3em 1.5em;
+    border-width: 2px;
+}
+
+.client-btn, .tutor-btn {
+    padding: .45rem 1.2rem;
+    margin: .5vw 2vw 1.25vw;
+    border-width: 1px;
+    font-size: .9em;
+}
+
+.client-btn:hover, .tutor-btn:hover {
+    border-width: 2px;
+}
+
+.hidden {
+    display: none;
+}
+
 #nav-bar {
     background-color: color(alto);
     height: $navBarHeight;
@@ -94,7 +136,6 @@ body {
 
     button:hover {
         background-color: color(white);
-        transform: scale(1.1);
     }
 
     .toggle span{
@@ -160,10 +201,6 @@ body {
     }
 }
 
-.hidden {
-    display: none;
-}
-
 main {
     margin-top: $navBarHeight;
     padding-top: .5rem;
@@ -203,5 +240,168 @@ header {
             font-size: 4.5vw;
             font-weight: bold;
         }
+    }
+}
+
+#teecha {
+    margin-top: 8vw;
+
+    h2 {
+        text-align: center;
+        position: absolute;
+        left: 40%;
+
+        #teecha-title {
+            letter-spacing: 0.05em;
+            color: color(curiosBlue);
+            -webkit-text-stroke: 1px color(mirage);
+            font-weight: bold;
+            font-size: 4vw;
+        }
+        #caption {
+            font-weight: bold;
+            font-size: 2vw;
+            text-decoration: none;
+            color: color(mirage);
+        }
+        #caption:hover {
+            text-decoration: underline;
+            color: color(curiosBlue);
+        }
+    }
+
+    #teecha-row {
+        display: flex;
+    }
+
+    #boxes {
+        margin: 8vw 2% 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sign-up.box, #teecha-box {
+        border: 1px solid color(silverSand);
+        border-radius: 5px;
+    }
+
+    #teecha-box {
+        padding: 1.5vw 3.5vw 1.5vw 2vw;
+        margin-top: 50px;
+
+        #home-tuition-areas {
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .category {
+            margin-top: 10px;
+            text-align: center;
+            font-weight: 600;
+        }
+
+        .sub-category {
+            margin-top: 10px;
+            font-weight: 300;
+        }
+
+        #teecha-areas {
+            display: flex;
+            margin: 20px 0;
+
+            .col-1 {
+                margin-right: 40px;
+            }
+
+            #skills {
+                display: flex;
+
+                #fl {
+                    margin-right: 20px;
+                    padding-left: 20px;
+                    border-left: 1px solid color(silverSand);
+                }
+                #gs {
+                    padding-left: 20px;
+                }
+            }
+
+            ul {
+                font-size: .9em;
+                color: color(deepSeaGreen);
+                line-height: 1.5em;
+                font-weight: 300;
+            }
+        }
+    }
+
+    .info {
+        font-weight: 300;
+        font-size: .8em;
+        text-align: center;
+    }
+
+    #catalogue {
+        margin: 2vw 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    #tuition-jobs {
+        margin: 5rem 0;
+
+        a {
+            box-shadow: 0 4px 4px rgba(39, 161, 218, 0.25);
+        }
+    }
+
+}
+
+.sign-up {
+    padding-bottom: 1vw;
+
+    .close-icon {
+        right: 10px;
+        top: 5px;
+        position: absolute;
+        color: white;
+        cursor: $pointer;
+    }
+
+    #sign-up-text {
+        text-align: center;
+        font-weight: bold;
+        margin: 1vw 0;
+    }
+
+    .user-title {
+        font-size: 1em;
+        margin: 1vw 0;
+        text-transform: lowercase;
+        font-weight: 300;
+        text-align: center;
+    }
+
+    section {
+        background-color: color(concrete);
+        border-radius: 5px;
+        padding: 1px;
+        margin: 0 2vw 2vw;
+    }
+
+    #client-btns {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #tutor-btns {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
     }
 }
